<resources>
    <string name="app_name">TP1</string>
    <string name="a1_tv_fill">Please fill the content</string>
    <string name="a1_til_firstName">First name</string>
    <string name="a1_til_lastName">Last name</string>
    <string name="a1_til_age">Age</string>
    <string name="a1_til_domain">Domain</string>
    <string name="a1_til_phone">Phone</string>
    <string name="a1_btn_submit">Submit</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="required">Required</string>
    <string name="a2_tv_activityName">Activity 2</string>
    <string name="a2_btn_ok">OK</string>
    <string name="a2_btn_back">Back</string>
    <string name="a3_tv_activityName">Activity 3</string>
    <string name="a3_btn_call">Call</string>
</resources>