<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/a1_tv_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a1_tv_fill"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10sp"/>

        <!-- first name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a1_til_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5sp"
            android:hint="@string/a1_til_firstName"
            android:layout_below="@+id/a1_tv_fill"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/a1_tiet_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- last name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a1_til_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5sp"
            android:hint="@string/a1_til_lastName"
            android:layout_below="@+id/a1_til_firstName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/a1_tiet_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- age -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a1_til_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5sp"
            android:hint="@string/a1_til_age"
            android:layout_below="@+id/a1_til_lastName"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/a1_tiet_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- domain -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a1_til_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5sp"
            android:hint="@string/a1_til_domain"
            android:layout_below="@+id/a1_til_age"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/a1_tiet_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a1_til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5sp"
            android:hint="@string/a1_til_phone"
            android:layout_below="@+id/a1_til_domain"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/a1_tiet_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- submit -->
        <Button
            android:id="@+id/a1_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="5sp"
            android:text="@string/a1_btn_submit"
            android:textSize="20sp"
            android:layout_below="@id/a1_til_phone"
            android:layout_marginBottom="10sp"/>

    </RelativeLayout>
</ScrollView>